--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Home</title>
   <meta property="og:title" content="Home" />
-  <meta property="og:image" content="https://heyufan1995.github.io/img/me.jpg" />
+  <meta property="og:image" content="https://heyufan1995.github.io/img/me_yf.jpg" />
   <meta name="description" content="Yufan He webpage">
   <meta property="og:description" content="Yufan He webpage" />
   <meta name="author" content="Yufan He">
@@ -31,7 +31,7 @@
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Yufan He</span>
     <span class="d-none d-lg-block">
-      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/img/me.jpg" alt="">
+      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/img/me_yf.jpg" alt="">
     </span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,11 +86,11 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="mr-auto">
 
-              <h1 class="mb-0">Rui
-                <span class="text-primary">Shen</span>
+              <h1 class="mb-0">Yufan
+                <span class="text-primary">He</span>
               </h1>
-              <div class="subheading mb-5">Baltimore, MD ·
-                <a href="mailto:sherr-remove-y.shen@jhu.edu">sherr<span style="display:none">-remove-</span>y.shen@jhu.edu</a>
+              <div class="subheading mb-5">Philadelphia, PA ·
+                <a href="mailto:heyufan1995@gmail.com">sherr<span style="display:none"></a>
               </div>
 
             </div>
@@ -102,7 +102,7 @@
             
         </div>
         <div>
-          <p>I am currently an applied research scientist at NVidia <a href="https://www.nvidia.com/en-us/about-nvidia/">, and I'm working on AutoML and Project MONAI <a href="https://monai.io/">.
+          <p>I am currently an applied research scientist at <a href="https://www.nvidia.com/en-us/about-nvidia/">NVidia</a>, and I'm working on AutoML and <a href="https://monai.io/">Project MONAI</a>.
 <p>Before that, I received my M.S. and Ph.D. from the Johns Hopkins University and my B.S. from Tsinghua University.</p>
 
 <p> [View my <a href="/files/resume_yufan.pdf">Resume</a>] </p>
