--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <a href="https://scholar.google.com/citations?user=btkEZXIAAAAJ&hl=en" data-toggle="tooltip" title="Google Scholar" data-offset="0 10">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                      <i class="fab fa-google-scholar fa-stack-1x fa-inverse"></i>
                     </span>
                   </a>
                 </li>
@@ -201,12 +201,10 @@
       [<a href="https://github.com/heyufan1995/self-domain-adapted-network">code</a>]
       [<a href="https://arxiv.org/pdf/2007.03162.pdf">paper</a>].
     </p>
-  </div>
-  <div class="resume-date">
-  <p>
-    The journal version "Autoencoder based self-supervised test-time adaptation for medical image analysis", Medical Image Analysis 2021, is available 
-    [<a href="https://www.sciencedirect.com/science/article/pii/S1361841521001821?casa_token=8YIoRKvtqEQAAAAA:psP4vq0j2C9cnMymG490Or4o67bOLH6Muqs27eFFU8jxaego4OuUrhkQVKo0AuIglhK6k-1i">paper</a>].
-  </p>
+    <p>
+      The journal version "Autoencoder based self-supervised test-time adaptation for medical image analysis", Medical Image Analysis 2021, is available 
+      [<a href="https://www.sciencedirect.com/science/article/pii/S1361841521001821?casa_token=8YIoRKvtqEQAAAAA:psP4vq0j2C9cnMymG490Or4o67bOLH6Muqs27eFFU8jxaego4OuUrhkQVKo0AuIglhK6k-1i">paper</a>].
+    </p>
   </div>
 </div>
 </div>
@@ -225,12 +223,10 @@
       [<a href="https://github.com/heyufan1995/oct_preprocess">code</a>]
       [<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6918831/pdf/nihms-1060816.pdf">paper</a>].
     </p>
-  </div>
-  <div class="resume-date">
-  <p>
-    The journal version "Structured layer surface segmentation for retina OCT using fully convolutional regression networks", Medical Image Analysis 2020, is also available 
-    [<a href="https://www.sciencedirect.com/science/article/pii/S1361841520302206?casa_token=QgrH1IqnXA4AAAAA:lzlbjz8z87dizSbWZkBUBMvXPav04YINzLPDlAxZTlBLsT7S3_Iyuv4ENMGz-K993rlXQq4l">paper</a>].
-  </p>
+    <p>
+      The journal version "Structured layer surface segmentation for retina OCT using fully convolutional regression networks", Medical Image Analysis 2020, is also available 
+      [<a href="https://www.sciencedirect.com/science/article/pii/S1361841520302206?casa_token=QgrH1IqnXA4AAAAA:lzlbjz8z87dizSbWZkBUBMvXPav04YINzLPDlAxZTlBLsT7S3_Iyuv4ENMGz-K993rlXQq4l">paper</a>].
+    </p>
   </div>
 </div>
 </div>
