--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <h1 class="mb-0">Yufan
                 <span class="text-primary">He</span>
               </h1>
-              <p><a href="mailto:heyufan1995@gmail.com">heyufan1995@gmail.com</a></p>
+              <p>Contact: <a href="mailto:heyufan1995@gmail.com">heyufan1995@gmail.com</a></p>
             </div>
 
             
@@ -106,14 +106,14 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://scholar.google.com/citations?user=btkEZXIAAAAJ&hl=en" data-toggle="tooltip" title="Google Scholar" data-offset="0 10">
-                    <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fab fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                  <a href="https://scholar.google.com/citations?user=btkEZXIAAAAJ&hl=en" title="Google Scholar">
+                    <span class="fa-stack fa-lg" aria-hidden="true">
+                      <i class="fas fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
+                    <span class="sr-only">Google Scholar</span>
                   </a>
-                </li>
-            
+                </li>            
           </ul>
         </div>
       </div>
