--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
       <div class="resume-date">
         <p> A differentiable neural archtecture search method for 3D medical image segmentation. It contains a new search space
           and a novel multi-path relaxation scheme for differentiable search. 
-          [<a href="https://github.com/Project-MONAI/MONAI/blob/dev/monai/networks/nets/dints.py">code</a>].
-          [<a href="https://arxiv.org/abs/2103.15954">paper</a>] 
+          [<a href="https://github.com/Project-MONAI/MONAI/blob/dev/monai/networks/nets/dints.py">code</a>]
+          [<a href="https://arxiv.org/abs/2103.15954">paper</a>].
         </p>
       </div>
     </div>
 
-    <h3 class="mb-3">TransMorph: Transformer for unsupervised medical image registration. (submitted to Medial Image Analysis)</h3>
+    <h3 class="mb-3">TransMorph: Transformer for unsupervised medical image registration. (submitted to Medical Image Analysis)</h3>
     <div class="resume-item d-flex flex-column flex-md-row mb-3">
       <div class="resume-content " style="width:350px;!important;">
         
@@ -194,8 +194,8 @@
         </p>
         <p>
           An ealier conference version "ViT-V-Net: Vision Transformer for Unsupervised Volumetric Medical Image Registration", MIDL 2021, is available 
-          [<a href="https://arxiv.org/abs/2104.06468">paper</a>]
-          [<a href="https://github.com/junyuchen245/ViT-V-Net_for_3D_Image_Registration_Pytorch">code</a>].
+          [<a href="https://github.com/junyuchen245/ViT-V-Net_for_3D_Image_Registration_Pytorch">code</a>]
+          [<a href="https://arxiv.org/abs/2104.06468">paper</a>].
 
         </p>
       </div>
@@ -331,7 +331,7 @@
   </div>
 </section>
 
-   
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ"></script>   
       
    
 
