--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 </a>
               </li>            
         </ul>
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=500&t=n&d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
+        <div style="display: flex; justify-content: flex-end">
+          <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=500&t=n&d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>       
+        </div>
       </div>
     </div>
      
