--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/#experience">Experience</a>
           </li>
-      
+
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/#misk">Miscellaneous</a>
+          </li>      
     </ul>
   </div>
 </nav>
@@ -110,9 +113,6 @@
         </ul>
       </div>
     </div>
-    <left>
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=500&t=n&d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>       
-    </left>
 </section>
 
 
@@ -326,7 +326,27 @@
   </div>
 </section>
 
-      
+<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="miscellaneous">
+  <div class="my-auto" id="misc-content">
+    <h2 class="mb-5">Miscellaneous</h2>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">My lovely dog Kunkka</h3>
+            <div class="resume-content " style="width:1000px;!important;">      
+              <img src="/img/kunkka/IMG_3262.JPG" style="max-width:1000px;padding: 5px"/>
+              <img src="/img/kunkka/IMG_3263.JPG" style="max-width:1000px;padding: 5px"/>
+              <img src="/img/kunkka/IMG_4186.JPG" style="max-width:1000px;padding: 5px"/>
+              <img src="/img/kunkka/IMG_4188.JPG" style="max-width:1000px;padding: 5px"/>
+              <img src="/img/kunkka/IMG_5149.jpg" style="max-width:1000px;padding: 5px"/>            
+            </div>
+          </div>
+
+        </div>
+  </div>
+  <left>
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=500&t=n&d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>       
+  </left>
+</section>      
    
 
 
