--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#misk">Miscellaneous</a>
+            <a class="nav-link js-scroll-trigger" href="/#miscellaneous">Miscellaneous</a>
           </li>      
     </ul>
   </div>
