--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     <h2 class="mb-5">Miscellaneous</h2>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">My lovely dog Kunkka</h3>
+            <h3 class="mb-0">My lovely dog <a href="https://dota2.fandom.com/wiki/Kunkka">Kunkka</a></h3>
             <div class="resume-content " style="width:1000px;!important;">      
               <img src="/img/kunkka/IMG_3262.JPG" style="max-width:1000px;padding: 5px"/>
               <img src="/img/kunkka/IMG_3263.JPG" style="max-width:1000px;padding: 5px"/>
