--- a/index.html
+++ b/index.html
@@ -321,13 +321,7 @@
         </div>   
   </div>
 </section>
-.row {
-  display: flex;
-}
-.column {
-  flex: 45%;
-  padding: 5px;
-}
+
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="miscellaneous">
   <div class="my-auto" id="misc-content">
     <h2 class="mb-5">Miscellaneous</h2>
@@ -335,17 +329,13 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">My lovely dog <a href="https://dota2.fandom.com/wiki/Kunkka">Kunkka</a></h3>
             <div class="resume-content " style="width:1000px;!important;">      
-              <div class="row">
-                <div class="column">
-                  <img src="/img/kunkka/kunkka.jpg" style="width:100%"/>
-                  <img src="/img/kunkka/IMG_3262.JPG" style="width:100%"/>
-                  <img src="/img/kunkka/IMG_3263.JPG" style="width:100%"/>
-                </div> 
-                <div class="column">
-                  <img src="/img/kunkka/IMG_4186.JPG" style="width:100%"/>
-                  <img src="/img/kunkka/IMG_4188.JPG" style="width:100%"/>
-                  <img src="/img/kunkka/IMG_5149.jpg" style="width:100%"/>            
-                </div>
+              <h3 class="mb-0">My lovely dog <a href="https://dota2.fandom.com/wiki/Kunkka">Kunkka</a></h3>
+              <div class="resume-content " style="width:1000px;!important;">      
+                <img src="/img/kunkka/IMG_3262.JPG" style="max-width:1000px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_3263.JPG" style="max-width:1000px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_4186.JPG" style="max-width:1000px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_4188.JPG" style="max-width:1000px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_5149.jpg" style="max-width:1000px;padding: 5px"/>            
               </div>
           </div>
         </div>
