--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </div>
   </div>
   <left>
-    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>       
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=757575&w=1000&t=tt&d=rdy4SUrVjEG1d7KHDKSLjn7nU-O7nhDtQAphlAp5tuQ&co=c2e6ff&cmo=ffb3b3&cmn=94ff94&ct=757575'></script>
   </left>
 </section>      
    
