--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="p0 m0 text-center" ></div>     
     </div>
       <div>
-        <p>I am currently an applied research scientist at <a href="https://www.nvidia.com/en-us/about-nvidia/">NVidia</a>, and I'm working on AutoML and <a href="https://monai.io/">Project MONAI</a>.
+        <p>I am currently an applied research scientist at <a href="https://www.nvidia.com/en-us/about-nvidia/">NVidia</a>, and I'm working on AutoML, transformers, self-supervised learning, and <a href="https://monai.io/">Project MONAI</a>.
         <p>Before that, I received my M.S. and Ph.D. from the Johns Hopkins University and my B.S. from Tsinghua University.</p>
         <p>[View my <a href="/files/yufan_resume.pdf">Resume</a>] </p>
 
@@ -309,6 +309,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Awards</h3>
+            <div><p>IEEE TMI Distinguished Reviewer</p></div>
             <div><p>MICCAI 2020 Student Travel Award</p></div>
             <div><p>MICCAI 2019 Young Scientist Award</p></div>
             <div><p>MICCAI 2019 Student Travel Award</p></div>
@@ -328,16 +329,13 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">My lovely dog <a href="https://dota2.fandom.com/wiki/Kunkka">Kunkka</a></h3>
-            <div class="resume-content " style="width:1000px;!important;">      
-              <h3 class="mb-0">My lovely dog <a href="https://dota2.fandom.com/wiki/Kunkka">Kunkka</a></h3>
-              <div class="resume-content " style="width:1000px;!important;">      
-                <img src="/img/kunkka/IMG_3262.JPG" style="max-width:1000px;padding: 5px"/>
-                <img src="/img/kunkka/IMG_3263.JPG" style="max-width:1000px;padding: 5px"/>
-                <img src="/img/kunkka/IMG_4186.JPG" style="max-width:1000px;padding: 5px"/>
-                <img src="/img/kunkka/IMG_4188.JPG" style="max-width:1000px;padding: 5px"/>
-                <img src="/img/kunkka/IMG_5149.jpg" style="max-width:1000px;padding: 5px"/>            
+              <div class="resume-content " style="width:500px;!important;">      
+                <img src="/img/kunkka/IMG_3262.JPG" style="max-width:500px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_3263.JPG" style="max-width:500px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_4186.JPG" style="max-width:500px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_4188.JPG" style="max-width:500px;padding: 5px"/>
+                <img src="/img/kunkka/IMG_5149.jpg" style="max-width:500px;padding: 5px"/>            
               </div>
-          </div>
         </div>
   </div>
   <left>
